--- a/views/result.ejs
+++ b/views/result.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Scraped Data from &lt;%= url %></h1>
-        <pre>&lt;%= JSON.stringify(scrapedData, null, 2) %></pre>
+        <h1>Scraped Data from <%= url %></h1>
+        <pre><%= JSON.stringify(scrapedData, null, 2) %></pre>
         <a href="/">Go Back</a>
     </div>
 </body>
